# southb-rust-2023

./: .gitmodules  README.md
_tools/: generate.sh
lesson01/: README.md  slide.md
lesson01/project/: Cargo.toml  README.md
lesson01/project/src/: do_not_edit.rs  lib.rs
lesson01/project/tests/: tests.rs
lesson02/: README.md  slide.md
lesson02/project01/: Cargo.toml  README.md
lesson02/project01/src/: main.rs
lesson02/project02/: Cargo.toml  README.md
lesson02/project02/src/: main.rs
lesson02/project03/: README.md
lesson02/project03/src/: main.rs
lesson03/: README.md  slide.md
lesson03/example/: Cargo.toml  Makefile  compose.yaml
lesson03/example/migrations/: 20230605041816_initial.up.sql
lesson03/example/src/: main.rs
lesson04/: README.md  slide.md
lesson05/: README.md  slide.md
lesson06/: slide.md
